--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="images/favicon.ico">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.4.4/swiper-bundle.css" integrity="sha512-wbWvHguVvzF+YVRdi8jOHFkXFpg7Pabs9NxwNJjEEOjiaEgjoLn6j5+rPzEqIwIroYUMxQTQahy+te87XQStuA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css" integrity="sha512-wR4oNhLBHf7smjy0K4oqzdWumd+r5/+6QO/vDda76MW5iug4PT7v86FoEkySIJft3XA0Ae6axhIvHrqwm793Nw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.css" integrity="sha512-6lLUdeQ5uheMFbWm3CP271l14RsX1xtx+J5x2yeIDkkiBpeVTNhTqijME7GgRKKi6hCqovwCoBTlRBEC20M8Mg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.4.4/swiper-bundle.min.js" integrity="sha512-k2o1KZdvUi59PUXirfThShW9Gdwtk+jVYum6t7RmyCNAVyF9ozijFpvLEWmpgqkHuqSWpflsLf5+PEW6Lxy/wA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.js" integrity="sha512-WNZwVebQjhSxEzwbettGuQgWxbpYdoLf7mH+25A7sfQbbxKeS5SQ9QBf97zOY4nOlwtksgDA/czSTmfj4DUEiQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 <body>
     <header id="header">
@@ -62,7 +67,203 @@
         </div>
         <div class="subMenuBg"></div>
     </header>
-
+    <div class="visual">
+        <div class="swiper mainSlide" style="height:987px">
+          <div class="swiper-wrapper">
+              <div class="swiper-slide slideItem">
+                  <div class="slide01_txt">
+                      <h1><a href="#">English Pear & Freesia</a></h1>
+                      <P>갓 익은 배의 관능적이면서도 산뜻한 향을<br>
+                          밝은 화이트 프리지아의 향이 감싸줍니다.
+                      </P>
+                  </div>
+                  <img src="images/slide01.avif" alt="img">
+              </div>
+              <div class="swiper-slide slideItem">
+                  <div class="slide02_txt">
+                      <h1><a href="#">SCENT FINDER</a></h1>
+                      <P>당신 만의 시그니처 향을 찾고 계시나요?<br>
+                          조 말로 런던이 제안하는 완벽한 향을 만나보세요.</P>
+                  </div>
+                  <img src="images/slide02.avif" alt="img">
+              </div>
+              <div class="swiper-slide slideItem">
+                  <div class="slide03_txt">
+                      <h1><a href="#">Jo Malone London's World</a></h1>
+                      <P>예상치 못한 반전 매력을 선사하는 멋진 향<br>
+                          널리 사랑받는 프레그런스의 새로운 모습까지 만나보세요.</P>
+                  </div>
+                  <img src="images/slide04.png" alt="img">
+              </div>
+              <div class="swiper-slide slideItem">
+                  <div class="slide04_txt">
+                      <h1><a href="#">cologne collection</a></h1>
+                      <P>그 누구도 예상치 못한 조합이 빚어낸 정교하지만 심플한 절제미를 담은 향기<br>
+                          널리 사랑받는 프레그런스의 새로운 모습까지 만나보세요.</P>
+                  </div>
+                  <img src="images/slide04.jpg" alt="img" style="height:987px;width:1920px">
+              </div>
+          </div>
+          <div class="mainSlide_arrow">
+              <div class="swiper-pagination mainSlide"></div>
+              <div class="swiper-button-next mainSlide">
+                  <img src="images/right-arrow_w.png" alt="">
+              </div>
+              <div class="swiper-button-prev mainSlide">
+                  <img src="images/left-arrow_w.png" alt="">
+              </div>
+          </div>
+      </div>
+      <div class="notice">
+          <div class="swiper noticeSlide">
+              <div class="swiper-wrapper">
+                  <div class="swiper-slide">
+                      <p><a href="#">한정 기간 나이트 컬렉션 2종 구매 시 리미티드 스퀘어 박스를 선물로 드립니다.</a></p>
+                  </div>
+                  <div class="swiper-slide">
+                      <p><a href="#">15만원 이상 구매 시 원하는 샘플 3종을 직접 선택하여 센트 페어링을 경험해 보세요.</a></p>
+                  </div>
+                  <div class="swiper-slide">
+                      <p><a href="#">첫 구매 시 넥타린 블로썸 앤 허니 코롱 9ML를 선물로 드립니다.</a></p>
+                  </div>
+              </div>
+              <div class="swiper-button-next noticeSlide"></div>
+              <div class="swiper-button-prev noticeSlide"></div>
+          </div>
+      </div>
+    </div>
+    <section class="sec01">
+        <div class="sec01Wrap container">
+            <h2>NEW PRODUCT</h2>
+            <div class="sec01_item">
+                <img src="images/sec01.avif" alt="">
+                <h3>English Pear & Freesia</h3>
+                <p>잉글리쉬 페어 앤 프리지아 매력의 재발견<br>
+                    온라인 부티크에서 다양한 혜택과 함께 가장 먼저 만나보세요.<br><br>
+                    혜택 1. 잉글리쉬 페어 앤 프리지아 플루티드 코롱 100ml 구매 시, 리미티드 페어 박스 포장<br>
+                    혜택 2. 리미티드 컬렉션 제품 2개 이상 구매 시 리미티드 스퀘어 박스 포장</p>
+            </div>
+            <div class="slick-slider newitemSlide">
+                <div class="slick-slide">
+                    <a href="#">
+                        <img src="images/sec01_item01.png" alt="">
+                        <p>English Pear & Freesia Fluted Cologne</p>
+                        <p>잉글리쉬 페어 앤 프리지아 플루티드 코롱</p>
+                    </a>
+                </div>
+                <div class="slick-slide">
+                    <a href="#">
+                        <img src="images/sec01_item02.png" alt="">
+                        <p>English Pear & Freesia Fluted Cologne</p>
+                        <p>잉글리쉬 페어 앤 프리지아 플루티드 코롱</p>
+                    </a>
+                </div>
+                <div class="slick-slide">
+                    <a href="#">
+                        <img src="images/sec01_item03.png" alt="">
+                        <p>English Pear & Freesia Fluted Cologne</p>
+                        <p>잉글리쉬 페어 앤 프리지아 플루티드 코롱</p>
+                    </a>
+                </div>
+                <div class="slick-slide">
+                    <a href="#">
+                        <img src="images/sec01_item04.png" alt="">
+                        <p>English Pear & Freesia Luxury Candle</p>
+                        <p>잉글리쉬 페어 앤 프리지아 럭셔리 캔들</p>
+                    </a>
+                </div>
+                <div class="slick-slide">
+                    <a href="#">
+                        <img src="images/sec01_item05.png" alt="">
+                        <p>English Pear & Freesia Body & Hand Wash</p>
+                        <p>잉글리쉬 페어 앤 프리지아 바디 앤 핸드 워시</p>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="sec02">
+        <div class="sec02Wrap container">
+            <h2>BEST SELLER</h2>
+            <div class="sec02_item">
+                <img src="images/sec02_img.avif" alt="">
+                <h3>BEST SELLER</h3>
+                <p>가장 사랑받는 제품들, 완벽한 선물을 위한 영감,<br> 일상의 즐거움과 새로운 루틴으로 향기로움을 채워 보세요.
+                </p>
+            </div>
+            <div class="slick-slider newitemSlide">
+                <div class="slick-slide">
+                    <a href="#">
+                        <img src="images/sec02_item01.png" alt="">
+                        <p>Blackberry & Bay Hand Cream</p>
+                        <p>블랙베리 앤 베이 핸드 크림</p>
+                    </a>
+                </div>
+                <div class="slick-slide">
+                    <a href="#">
+                        <img src="images/sec02_item02.png" alt="">
+                        <p>blackberry & bay body & hand wash</p>
+                        <p>블랙베리 앤 베이 바디 앤 핸드 워시</p>
+                    </a>
+                </div>
+                <div class="slick-slide">
+                    <a href="#">
+                        <img src="images/sec02_item03.png" alt="">
+                        <p>Wild Bluebell Body & Hand Wash</p>
+                        <p>와일드 블루벨 바디 앤 핸드 워시</p>
+                    </a>
+                </div>
+                <div class="slick-slide">
+                    <a href="#">
+                        <img src="images/sec02_item04.png" alt="">
+                        <p>Wild Bluebell Body Creme</p>
+                        <p>와일드 블루벨 바디 크림</p>
+                    </a>
+                </div>
+                <div class="slick-slide">
+                    <a href="#">
+                        <img src="images/sec01_item05.png" alt="">
+                        <p>English Pear & Freesia Body & Hand Wash</p>
+                        <p>잉글리쉬 페어 앤 프리지아 바디 앤 핸드 워시</p>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="sec03 container">
+        <div class="sec03_item">
+            <img src="images/online.png" alt="">
+            <div class="sec03_txt">
+                <h3>온라인 부티크 단독 프로모션</h3>
+                <p>한정 기간 20만원 이상 구매 시, 트래블 파우치를 선물로 드립니다.<br>
+                    행사기간: 2022년 10월 19일 ~ 2022년 10월 28일<br><br>
+                    *선착순 한정 수량으로 사전 공지 없이 종료될 수 있으며, 장바구니에 담기는 증정품을 확인해 주세요.</p>
+            </div>
+        </div>
+    </section>
+    <section class="sec04 container">
+        <div class="sec04_item">
+            <div class="sec04_txt">
+                <h3>그 무엇보다 중요한 정신건강,</h3>
+                <p>조 말론 런던은 지난 2012년부터 정신건강과 관련된 편견을 없애고자 다양한 영감을 주는 자선단체 및 프로젝트를 적극 지원해왔습니다.
+                    10년이 지난 지금, 조 말론 런던이 후원하는 정신건강 문제 해결을 위한 재단(Shining A Light On Mental Health Foundation) 설립을 발표하게 되어 매우 기쁘게 생각합니다.
+                    스스로의 마음을 친절하게 보듬으며, 타인에게도 손을 내밀며 정신건강 문제 해결을 위해 함께 적극 나서고자 합니다.</p>
+            </div>
+            <img src="images/story.gif" alt="">
+        </div>
+    </section>
+    <section class="sec05 container">
+        <div class="sec05_item01">
+            <img src="images/sec05_img.png" alt="">
+            <h3><a href="#">나만의 팔레트를 만들어 보세요.</a></h3>
+            <p>더 알아보기</p>
+        </div>
+        <div class="sec05_item02">
+            <img src="images/sec05_img2.jpg" alt="">
+            <h3><a href="#">완벽한 선물</a></h3>
+            <p>더 알아보기</p>
+        </div>
+    </section>
     <script src="js/script.js"></script>
 </body>
 </html>
