--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <ul class="headerMenu">
                     <li><a href="worth.html">조 말론 런던의 가치</a>
                         <ul class="submenu">
-                            <a href=""><img src="./images/submenu01_01.avif" alt=""></a> 
+                            <a href=""><img src="./images/submenu01_01.avif" alt=""></a>
                             <div class="Item">
                                 <li><a href="#">우리의 자선활동 미션</a></li>
                                 <li><a href="#">우리의 사람 & 일터</a></li>
@@ -35,18 +35,24 @@
                     </li>
                     <li><a href="shopping.html">쇼핑하기</a>
                         <ul class="submenu">
-                            <li><a href="#">신제품</a></li>
-                            <li><a href="#">베스트셀러</a></li>
-                            <li><a href="#">센트</a></li>
-                            <li><a href="#">코롱</a></li>
+                            <a href=""><img src="./images/submenu01_02.avif" alt=""></a>
+                            <div class="Item">
+                                <li><a href="#">신제품</a></li>
+                                <li><a href="#">베스트셀러</a></li>
+                                <li><a href="#">센트</a></li>
+                                <li><a href="#">코롱</a></li>
+                            </div>
                         </ul>
                     </li>
                     <li><a href="gift.html">선물하기</a>
                         <ul class="submenu">
-                            <li><a href="#">기프트파인더</a></li>
-                            <li><a href="#">센트파인더</a></li>
-                            <li><a href="#">퍼스널</a></li>
-                            <li><a href="#">추천제품</a></li>
+                            <a href=""><img src="./images/submenu01_03.avif" alt=""></a>
+                            <div class="Item">
+                                <li><a href="#">기프트파인더</a></li>
+                                <li><a href="#">센트파인더</a></li>
+                                <li><a href="#">퍼스널</a></li>
+                                <li><a href="#">추천제품</a></li>
+                            </div>
                         </ul>
                     </li>
                 </ul>
@@ -66,10 +72,24 @@
             </div>
         </div>
         <div class="subMenuBg"></div>
+        <div class="m_menuBg"></div>
+        <!-- <div class="m_menuClone">
+            <h1><a href="./"><img src="images/logo_b_s.png" alt=""></a></h1>
+            <div class="m_bar"></div>
+            <div class="m_menu"></div>
+            <div class="m_bar"></div>
+            <div class="m_menuLogin">
+                <ul>
+                    <li><a href="#">로그인/회원가입</a></li>
+                    <li><a href="#">관심상품 리스트</a></li>
+                    <li><a href="#">쇼핑백</a></li>
+                </ul>
+            </div>
+        </div> -->
     </header>
     <div class="visual">
         <div class="swiper mainSlide" style="height:987px">
-          <div class="swiper-wrapper">
+          <div class="swiper-wrapper" >
               <div class="swiper-slide slideItem">
                   <div class="slide01_txt">
                       <h1><a href="#">English Pear & Freesia</a></h1>
@@ -101,7 +121,7 @@
                       <P>그 누구도 예상치 못한 조합이 빚어낸 정교하지만 심플한 절제미를 담은 향기<br>
                           널리 사랑받는 프레그런스의 새로운 모습까지 만나보세요.</P>
                   </div>
-                  <img src="images/slide04.jpg" alt="img" style="height:987px;width:1920px">
+                  <img src="images/slide04_r.png" alt="img">
               </div>
           </div>
           <div class="mainSlide_arrow">
@@ -134,7 +154,7 @@
     </div>
     <section class="sec01">
         <div class="sec01Wrap container">
-            <h2>NEW PRODUCT</h2>
+            <h1>JO MALONE NEW PRODUCT</h1>
             <div class="sec01_item">
                 <img src="images/sec01.avif" alt="">
                 <h3>English Pear & Freesia</h3>
@@ -184,7 +204,7 @@
     </section>
     <section class="sec02">
         <div class="sec02Wrap container">
-            <h2>BEST SELLER</h2>
+            <h1>BEST SELLER</h1>
             <div class="sec02_item">
                 <img src="images/sec02_img.avif" alt="">
                 <h3>BEST SELLER</h3>
@@ -231,23 +251,28 @@
         </div>
     </section>
     <section class="sec03 container">
+        <h1>JO MALONE EVENT & NEWS</h1>
         <div class="sec03_item">
             <img src="images/online.png" alt="">
             <div class="sec03_txt">
-                <h3>온라인 부티크 단독 프로모션</h3>
+                <h2>온라인 부티크 단독 프로모션</h2>
                 <p>한정 기간 20만원 이상 구매 시, 트래블 파우치를 선물로 드립니다.<br>
                     행사기간: 2022년 10월 19일 ~ 2022년 10월 28일<br><br>
-                    *선착순 한정 수량으로 사전 공지 없이 종료될 수 있으며, 장바구니에 담기는 증정품을 확인해 주세요.</p>
+                    *선착순 한정 수량으로 사전 공지 없이 종료될 수 있으며,<br>
+                     장바구니에 담기는 증정품을 확인해 주세요.</p>
             </div>
         </div>
     </section>
     <section class="sec04 container">
         <div class="sec04_item">
             <div class="sec04_txt">
-                <h3>그 무엇보다 중요한 정신건강,</h3>
-                <p>조 말론 런던은 지난 2012년부터 정신건강과 관련된 편견을 없애고자 다양한 영감을 주는 자선단체 및 프로젝트를 적극 지원해왔습니다.
-                    10년이 지난 지금, 조 말론 런던이 후원하는 정신건강 문제 해결을 위한 재단(Shining A Light On Mental Health Foundation) 설립을 발표하게 되어 매우 기쁘게 생각합니다.
-                    스스로의 마음을 친절하게 보듬으며, 타인에게도 손을 내밀며 정신건강 문제 해결을 위해 함께 적극 나서고자 합니다.</p>
+                <h2>그 무엇보다 중요한 정신건강</h2>
+                <p>조 말론 런던은 지난 2012년부터 정신건강과 관련된 편견을 없애고자<br>
+                     다양한 영감을 주는 자선단체 및 프로젝트를 적극 지원해왔습니다.<br><br>
+                    10년이 지난 지금, 조 말론 런던이 후원하는 정신건강 문제 해결을 위한<br>
+                     재단(Shining A Light On Mental Health Foundation) 설립을 발표하게 되어<br> 매우 기쁘게 생각합니다.<br><br>
+                    스스로의 마음을 친절하게 보듬으며, <br>
+                    타인에게도 손을 내밀며 정신건강 문제 해결을 위해 함께 적극 나서고자 합니다.</p>
             </div>
             <img src="images/story.gif" alt="">
         </div>
@@ -264,6 +289,71 @@
             <p>더 알아보기</p>
         </div>
     </section>
+    <section class="sec06">
+        <h1>온라인 부티크의 특별한 서비스</h1>
+        <ul>
+            <li><a href="#">
+                <img src="images/gift.avif" alt="">
+                <h3><a href="#">선물 포장</a></h3>
+                <p><a href="#">시그니처 박스에 정성스럽게 포장해드립니다.</a></p>
+            </a></li>
+            <li><a href="#">
+                <img src="images/sample.avif" alt="">
+                <h3><a href="#">샘플</a></h3>
+                <p><a href="#">조 말론 런던의 새로운 향을 경험해보세요.</a></p>
+            </a></li>
+            <li><a href="#">
+                <img src="images/sample2.avif" alt="">
+                <h3><a href="#">무료 배송</a></h3>
+                <p><a href="#">향기로운 선물을 전달해드립니다.</a></p>
+            </a></li>
+        </ul>
+    </section>
+    <footer>
+        <div class="footerWrap">
+            <div class="footer container">
+                <div class="footlogo">
+                    <img src="images/logo_footer.png" alt="">
+                </div>
+                <div class="foottxt">
+                    <ul class="footerMenu">
+                        <li><a href="#">고객서비스</a>
+                            <ul>
+                                <li><a href="#">자주 묻는 질문</a></li>
+                                <li><a href="#">주문 조회</a></li>
+                                <li><a href="#">교환 및 환불 규정</a></li>
+                                <li><a href="#">고객관리지원팀</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">회사 소개</a>
+                            <ul>
+                                <li><a href="#">법인 정보</a></li>
+                                <li><a href="#">커리어</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">소셜 네트워크</a>
+                            <ul>
+                                <li><a href="#">인스타그램</a></li>
+                                <li><a href="#">페이스북</a></li>
+                                <li><a href="#">유튜브</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <p>이엘씨에이한국(유) 대표: Teng, Hsiao-Hua (Catherine),<br>
+                        서울시 강남구 강남대로 382 (역삼동) 메리츠타워, 06232<br>
+                        사업자등록번호: 211-81-71889<br>
+                        통신판매업신고번호: 강남-15737호<br>
+                        고객관리지원팀: (02) 6971-3228  consumercare-kr@jomalone.com<br>
+                        호스팅서비스 사업자: ㈜엘지유플러스<br><br>
+                
+                        © Jo Malone London 2021</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+
+
     <script src="js/script.js"></script>
 </body>
 </html>
