--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                           밝은 화이트 프리지아의 향이 감싸줍니다.
                       </P>
                   </div>
-                  <img src="images/slide01.avif" alt="img">
+                  <img src="images/slide01.jpg" alt="img">
               </div>
               <div class="swiper-slide slideItem">
                   <div class="slide02_txt">
@@ -105,7 +105,7 @@
                       <P>당신 만의 시그니처 향을 찾고 계시나요?<br>
                           조 말로 런던이 제안하는 완벽한 향을 만나보세요.</P>
                   </div>
-                  <img src="images/slide02.avif" alt="img">
+                  <img src="images/slide02.jpg" alt="img">
               </div>
               <div class="swiper-slide slideItem">
                   <div class="slide03_txt">
@@ -293,17 +293,17 @@
         <h1>온라인 부티크의 특별한 서비스</h1>
         <ul>
             <li><a href="#">
-                <img src="images/gift.avif" alt="">
+                <img src="images/gift.jpg" alt="">
                 <h3><a href="#">선물 포장</a></h3>
                 <p><a href="#">시그니처 박스에 정성스럽게 포장해드립니다.</a></p>
             </a></li>
             <li><a href="#">
-                <img src="images/sample.avif" alt="">
+                <img src="images/sample.jpg" alt="">
                 <h3><a href="#">샘플</a></h3>
                 <p><a href="#">조 말론 런던의 새로운 향을 경험해보세요.</a></p>
             </a></li>
             <li><a href="#">
-                <img src="images/sample2.avif" alt="">
+                <img src="images/sample2.jpg" alt="">
                 <h3><a href="#">무료 배송</a></h3>
                 <p><a href="#">향기로운 선물을 전달해드립니다.</a></p>
             </a></li>
